--- a/kriti.html
+++ b/kriti.html
@@ -13,7 +13,7 @@
             <td>
                 <h1>Kriti Jha</h1>
                 <p>Software Engineer @ <strong>HARMAN International</strong><br>I am developer with a problem solver mindset</p>
-                <p><a href="C:\Users\DELL\OneDrive\Desktop\Web Dev Bootcamp\new\contact_me.html">Contact Me</a></p>
+                <p><a href="contact_me.html">Contact Me</a></p>
             </td>             
         </tr>
     </table>    
